added media queries

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     good morning, bento
     <div class="calculator">
         <div id="answer">
-            <input id="inputNum" type="text" placeholder="0" value="" onkeyup="isTyping(event)">
-            <div id="displayOp">?</div>
+            <input id="inputNum" type="text" placeholder="0" value="" disabled>
+            <div id="displayOp"></div>
         </div>
         <div id="calc-buttons">
             <input type="button" id="clear" name="clear" value="C">
